[project]
name = "earnings-call-analysis"
version = "0.0.1"
description = "A collection of scripts demonstrating how to retrieve and analyze Earnings Call Transcripts."
authors = [
    {name = "EarningsCall", email = "dev@earningscall.biz"},
]
requires-python = ">= 3.8"
dependencies = [
    "earningscall>=0.0.16",
    "more-itertools",
    "openai",
    "requests",
    "langchain>=0.2.5",
    "langchain-anthropic",
    "langchain-community",
    "langgraph>=0.0.69",
    "pydantic~=2.7.2",
    "textblob~=0.18.0.post0",
    "matplotlib"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#packages = ["earningscall"]
